<?xml version="1.0"?>
<package format="3">
  <name>tracked_objects_crop_box_filter</name>
  <version>0.0.1</version>
  <description>Tracked Objects Filtering Node</description>
  <maintainer email="jacob.lambert@map4.jp">Jacob Lambert</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
